--- a/Client/MauiBlazorApp/Pages/Android.razor
+++ b/Client/MauiBlazorApp/Pages/Android.razor
@@ -304,18 +304,23 @@
 }
 else
 {
-
-    <div class="table-responsive">
+     <div class="table-responsive">
         <table class="table">
             <tbody>
                 @foreach (var person in _PersonList)
                 {
                     <div class="person-item" @onclick="@(() => DisplayDetails(person.Id))">
+
                         <div class="person-name">
                             <span class="person-vorname">@person.Vorname</span>
                             <span class="person-nachname">@person.Nachname</span>
                         </div>
-                        <div class="person-telefonnummer">@person.TelNummer</div>
+
+                        @foreach (var telefonnummer in person.PersonNummern)
+                        {
+                            <div>@telefonnummer.TelNummer</div>
+                        }
+
                         <div class="divider"></div>
                     </div>
                 }
@@ -333,8 +338,19 @@ else
         NavManager.NavigateTo($"/personDisplay/{id}");
     }
 
-    private string searchText = string.Empty;
+
+    private void ClearSearchText()
+    {
+
+        searchText = "";
+    }
+
+
+
+
     List<PersonModel> _PersonList;
+
+    private string searchText = string.Empty;
     private List<PersonModel> allPersons;
     private List<PersonModel> searchResults;
 
@@ -370,60 +386,31 @@ else
         }
     }
 
-    private void ClearSearchText()
-    {
-        searchText = "";
-        searchResults = null;
-    }
-
     private async void BtnSearch_Clicked()
     {
         string searchText = this.searchText;
 
         if (!string.IsNullOrEmpty(searchText))
         {
-            var result = await Swal.FireAsync(new SweetAlertOptions
-                {
-                    Title = $"Contact with name '{searchText}' does not exist.",
-                    Text = "Do you want to add it?",
-                    //Icon = SweetAlertIcon.Warning,
-                    ShowCancelButton = true,
-                    ConfirmButtonText = "yes",
-                    CancelButtonText = "No",
+            // var results = await PersonService.SearchPersonsByName(searchText);
 
-                    CustomClass = new SweetAlertCustomClass
-                    {
-                        Popup = "my-custom-popup-class",
-                        Title = "my-custom-title-class",
-                        Icon = "Icon-popup",
-                        Content = "my-custom-content-class",
-                        ConfirmButton = "my-custom-confirm-button-class",
-                        CancelButton = "my-custom-cancel-button-class"
-                    }
-
-
-                });
-
-            var confrim = !string.IsNullOrEmpty(result.Value); // if value ture means that user clikced on conferm btn.
-
-            if (confrim)
-            {
-                NavManager.NavigateTo($"addPerson?name={searchText}");
-            }
-
-            //     bool addContact = await JSRuntime.InvokeAsync<bool>(
-            //         "confirm",
-            //         $"Contact with name '{searchText}' does not exist. Do you want to add it?");
-
-            //     if (addContact)
-            //     {
-            //         NavManager.NavigateTo($"addPerson?name={searchText}");
-            //     }
+            // if (results.Count > 0)
+            // {
+            //     searchResults = results;
             // }
-            else
+            // else
             {
-                //  await oninitializedasync();
+                bool addContact = await JSRuntime.InvokeAsync<bool>("confirm", $"Contact with name '{searchText}' does not exist. Do you want to add it?");
+
+                if (addContact)
+                {
+                    NavManager.NavigateTo($"addPerson?name={searchText}");
+                }
             }
+        }
+        else
+        {
+            await OnInitializedAsync();
         }
     }
 
@@ -438,10 +425,11 @@ else
         bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this person?");
         if (confirmed)
         {
-            var deleteresponse = await PersonService.DeletePerson(new AddUpdatePersonRequest
-                {
-                    Id = personId
-                });
+            var deleteresponse = await PersonService.DeletePerson(personId
+                // {
+                //     Id = personId
+                // }
+                );
 
             if (deleteresponse.Success)
             {
@@ -454,25 +442,25 @@ else
     private async void DisplayOption(PersonModel personDetail)
     {
 
-        var response = await App.Current.MainPage.DisplayActionSheet("Select Option", "Ok", null, "Update Contact", "Delete Contact");
+        //     // var response = await App.Current.MainPage.DisplayActionSheet("Select Option", "Ok", null, "Update Contact", "Delete Contact");
 
-        if (response == "Update Contact")
+        //     // if (response == "Update Contact")
 
-        {
-            NavManager.NavigateTo($"updatePerson/{personDetail.Id}");
+        //     // {
+        //     //     NavManager.NavigateTo($"updatePerson/{personDetail.Id}");
 
-        }
-        else if (response == "Delete Contact")
+        //     // }
+        //     // else if (response == "Delete Contact")
 
-        {
+        //     // {
 
-            DisplayDeleteConfirmation(personDetail.Id);
-
-
+        //     //        DisplayDeleteConfirmation(personDetail.Id);
 
 
-        }
+
+
     }
+
 
     [Parameter] public EventCallback<bool> OnConfirmation { get; set; }
 
@@ -480,7 +468,6 @@ else
     {
         await OnConfirmation.InvokeAsync(true);
     }
-
 }
 
 
