--- a/Client/MauiBlazorApp/Pages/Index2.razor
+++ b/Client/MauiBlazorApp/Pages/Index2.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/contact2"
 @using MauiBlazorApp.Models
 @using MauiBlazorApp.Services
 @using System.Text
@@ -50,7 +50,7 @@
  *@
 
 <div class="header">
-    <span>Person List</span>
+    <span>Person List2</span>
 
 
     <div class="input-group">
