--- a/Client/BlazorApp/Shared/NavMenu.razor
+++ b/Client/BlazorApp/Shared/NavMenu.razor
@@ -22,14 +22,22 @@
 </style>
 
 
+
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Contact List
+                <span class="oi oi-home" aria-hidden="true"></span> Personen Liste
             </NavLink>
         </div>
 
+
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Contact List2
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
@@ -44,14 +52,13 @@
             </NavLink>
         </div>
 
-        @* <div class="nav-item px-3">
-        <NavLink class="nav-link" href="fetchdata">
-        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+        <div class="nav-item px-3">
+        <NavLink class="nav-link" href="ImportJsonComponent">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Import Json
         </NavLink>
-        </div> *@
+        </div>
     </nav>
 </div>
-
 
 
 
