--- a/Client/BlazorApp/Shared/NavMenu.razor.css
+++ b/Client/BlazorApp/Shared/NavMenu.razor.css
@@ -36,7 +36,8 @@ body {
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #FFFFFF;
+        font: normal normal normal 15px/28px ;
         border-radius: 4px;
         height: 3rem;
         display: flex;
