--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -26,12 +26,19 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Contact List 
+                <span class="oi oi-home" aria-hidden="true"></span> Personen Liste
             </NavLink>
         </div>
 
-
+      
+        
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Contact List2
+            </NavLink>
+        </div>
+
+         <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Name List
             </NavLink>
